--- a/MiniFlow.ipynb
+++ b/MiniFlow.ipynb
@@ -1,6 +1,407 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "You need to change the Add() class below.\n",
+    "\"\"\"\n",
+    "\n",
+    "class Node(object):\n",
+    "    def __init__(self, inbound_nodes=[]):\n",
+    "        # Nodes from which this Node receives values\n",
+    "        self.inbound_nodes = inbound_nodes\n",
+    "        # Nodes to which this Node passes values\n",
+    "        self.outbound_nodes = []\n",
+    "        # A calculated value\n",
+    "        self.value = None\n",
+    "        # Add this node as an outbound node on its inputs.\n",
+    "        for n in self.inbound_nodes:\n",
+    "            n.outbound_nodes.append(self)\n",
+    "\n",
+    "    # These will be implemented in a subclass.\n",
+    "    def forward(self):\n",
+    "        \"\"\"\n",
+    "        Forward propagation.\n",
+    "\n",
+    "        Compute the output value based on `inbound_nodes` and\n",
+    "        store the result in self.value.\n",
+    "        \"\"\"\n",
+    "        raise NotImplemented"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Input(Node):\n",
+    "    def __init__(self):\n",
+    "        # an Input node has no inbound nodes,\n",
+    "        # so no need to pass anything to the Node instantiator\n",
+    "        Node.__init__(self)\n",
+    "\n",
+    "    # NOTE: Input node is the only node that may\n",
+    "    # receive its value as an argument to forward().\n",
+    "    #\n",
+    "    # All other node implementations should calculate their\n",
+    "    # values from the value of previous nodes, using\n",
+    "    # self.inbound_nodes\n",
+    "    #\n",
+    "    # Example:\n",
+    "    # val0 = self.inbound_nodes[0].value\n",
+    "    def forward(self, value=None):\n",
+    "        print\n",
+    "        if value is not None:\n",
+    "            self.value = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Add(Node):\n",
+    "    def __init__(self, inbound_nodes=[]):\n",
+    "        # You could access `x` and `y` in forward with\n",
+    "        # self.inbound_nodes[0] (`x`) and self.inbound_nodes[1] (`y`)\n",
+    "        Node.__init__(self, inbound_nodes)\n",
+    "\n",
+    "    def forward(self):\n",
+    "        \"\"\"\n",
+    "        Set the value of this node (`self.value`) to the sum of its inbound_nodes.\n",
+    "        Remember to grab the value of each inbound_node to sum!\n",
+    "\n",
+    "        Your code here!\n",
+    "        \"\"\"\n",
+    "        self.value = 0\n",
+    "        for node in self.inbound_nodes :\n",
+    "            self.value = self.value + node.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mul(Node):\n",
+    "    def __init__(self, inbound_nodes=[]):\n",
+    "        # You could access `x` and `y` in forward with\n",
+    "        # self.inbound_nodes[0] (`x`) and self.inbound_nodes[1] (`y`)\n",
+    "        Node.__init__(self, inbound_nodes)\n",
+    "\n",
+    "    def forward(self):\n",
+    "        \"\"\"\n",
+    "        Set the value of this node (`self.value`) to the sum of its inbound_nodes.\n",
+    "        Remember to grab the value of each inbound_node to sum!\n",
+    "\n",
+    "        Your code here!\n",
+    "        \"\"\"\n",
+    "        self.value = 1\n",
+    "        for node in self.inbound_nodes :\n",
+    "            self.value = self.value * node.value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def topological_sort(feed_dict):\n",
+    "    \"\"\"\n",
+    "    Sort the nodes in topological order using Kahn's Algorithm.\n",
+    "\n",
+    "    `feed_dict`: A dictionary where the key is a `Input` Node and the value is the respective value feed to that Node.\n",
+    "\n",
+    "    Returns a list of sorted nodes.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    input_nodes = [n for n in feed_dict.keys()]\n",
+    "\n",
+    "    G = {}\n",
+    "    nodes = [n for n in input_nodes]\n",
+    "    while len(nodes) > 0:\n",
+    "        n = nodes.pop(0)\n",
+    "        if n not in G:\n",
+    "            G[n] = {'in': set(), 'out': set()}\n",
+    "        for m in n.outbound_nodes:\n",
+    "            if m not in G:\n",
+    "                G[m] = {'in': set(), 'out': set()}\n",
+    "            G[n]['out'].add(m)\n",
+    "            G[m]['in'].add(n)\n",
+    "            nodes.append(m)\n",
+    "\n",
+    "    L = []\n",
+    "    S = set(input_nodes)\n",
+    "    while len(S) > 0:\n",
+    "        n = S.pop()\n",
+    "\n",
+    "        if isinstance(n, Input):\n",
+    "            n.value = feed_dict[n]\n",
+    "\n",
+    "        L.append(n)\n",
+    "        for m in n.outbound_nodes:\n",
+    "            G[n]['out'].remove(m)\n",
+    "            G[m]['in'].remove(n)\n",
+    "            # if no other incoming edges add to S\n",
+    "            if len(G[m]['in']) == 0:\n",
+    "                S.add(m)\n",
+    "    return L\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_pass(graph):\n",
+    "    \"\"\"\n",
+    "    Performs a forward pass through a list of sorted Nodes.\n",
+    "\n",
+    "    Arguments:\n",
+    "\n",
+    "        `graph`: The result of calling `topological_sort`.\n",
+    "    \"\"\"\n",
+    "    # Forward pass\n",
+    "    for n in graph:\n",
+    "        n.forward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Linear(Node):\n",
+    "    def __init__(self, inputs, weights, bias):\n",
+    "        Node.__init__(self, [inputs, weights, bias])\n",
+    "\n",
+    "        # NOTE: The weights and bias properties here are not\n",
+    "        # numbers, but rather references to other nodes.\n",
+    "        # The weight and bias values are stored within the\n",
+    "        # respective nodes.\n",
+    "\n",
+    "    def forward(self):\n",
+    "        \"\"\"\n",
+    "        Set self.value to the value of the linear function output.\n",
+    "\n",
+    "        Your code goes here!\n",
+    "        \"\"\"\n",
+    "        inputs = self.inbound_nodes[0].value\n",
+    "        weights = self.inbound_nodes[1].value\n",
+    "        bias = self.inbound_nodes[2].value\n",
+    "        self.value = np.add(np.dot(inputs,weights),bias)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sigmoid(Node):\n",
+    "    \"\"\"\n",
+    "    You need to fix the `_sigmoid` and `forward` methods.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, node):\n",
+    "        Node.__init__(self, [node])\n",
+    "\n",
+    "    def _sigmoid(self, x):\n",
+    "        \"\"\"\n",
+    "        This method is separate from `forward` because it\n",
+    "        will be used later with `backward` as well.\n",
+    "\n",
+    "        `x`: A numpy array-like object.\n",
+    "\n",
+    "        Return the result of the sigmoid function.\n",
+    "\n",
+    "        Your code here!\n",
+    "        \"\"\"\n",
+    "        return 1. / (1. + np.exp(-x))\n",
+    "    \n",
+    "    def forward(self):\n",
+    "        \"\"\"\n",
+    "        Set self.value to the value of the linear function output.\n",
+    "\n",
+    "        Your code goes here!\n",
+    "        \"\"\"\n",
+    "        x = self.inbound_nodes[0].value\n",
+    "        self.value = self._sigmoid(x)\n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MSE(Node):\n",
+    "    def __init__(self, y, a):\n",
+    "        \"\"\"\n",
+    "        The mean squared error cost function.\n",
+    "        Should be used as the last node for a network.\n",
+    "        \"\"\"\n",
+    "        # Call the base class' constructor.\n",
+    "        Node.__init__(self, [y, a])\n",
+    "\n",
+    "    def forward(self):\n",
+    "        \"\"\"\n",
+    "        Calculates the mean squared error.\n",
+    "        \"\"\"\n",
+    "        # NOTE: We reshape these to avoid possible matrix/vector broadcast\n",
+    "        # errors.\n",
+    "        #\n",
+    "        # For example, if we subtract an array of shape (3,) from an array of shape\n",
+    "        # (3,1) we get an array of shape(3,3) as the result when we want\n",
+    "        # an array of shape (3,1) instead.\n",
+    "        #\n",
+    "        # Making both arrays (3,1) insures the result is (3,1) and does\n",
+    "        # an elementwise subtraction as expected.\n",
+    "        y = self.inbound_nodes[0].value.reshape(-1, 1)\n",
+    "        a = self.inbound_nodes[1].value.reshape(-1, 1)\n",
+    "        # TODO: your code here\n",
+    "        self.value = np.sum(np.square(y-a)) / len(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.4166666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Test your MSE method with this script!\n",
+    "\n",
+    "No changes necessary, but feel free to play\n",
+    "with this script to test your network.\n",
+    "\"\"\"\n",
+    "\n",
+    "import numpy as np\n",
+    "from miniflow import *\n",
+    "\n",
+    "y, a = Input(), Input()\n",
+    "cost = MSE(y, a)\n",
+    "\n",
+    "y_ = np.array([1, 2, 3])\n",
+    "a_ = np.array([4.5, 5, 10])\n",
+    "\n",
+    "feed_dict = {y: y_, a: a_}\n",
+    "graph = topological_sort(feed_dict)\n",
+    "# forward pass\n",
+    "forward_pass(cost,graph)\n",
+    "\n",
+    "\"\"\"\n",
+    "Expected output\n",
+    "\n",
+    "23.4166666667\n",
+    "\"\"\"\n",
+    "print(cost.value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1.23394576e-04   9.82013790e-01]\n",
+      " [  1.23394576e-04   9.82013790e-01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "This network feeds the output of a linear transform\n",
+    "to the sigmoid function.\n",
+    "\n",
+    "Finish implementing the Sigmoid class in miniflow.py!\n",
+    "\n",
+    "Feel free to play around with this network, too!\n",
+    "\"\"\"\n",
+    "\n",
+    "import numpy as np\n",
+    "from miniflow import *\n",
+    "\n",
+    "X, W, b = Input(), Input(), Input()\n",
+    "\n",
+    "f = Linear(X, W, b)\n",
+    "g = Sigmoid(f)\n",
+    "\n",
+    "X_ = np.array([[-1., -2.], [-1, -2]])\n",
+    "W_ = np.array([[2., -3], [2., -3]])\n",
+    "b_ = np.array([-3., -5])\n",
+    "\n",
+    "feed_dict = {X: X_, W: W_, b: b_}\n",
+    "\n",
+    "graph = topological_sort(feed_dict)\n",
+    "output = forward_pass(g, graph)\n",
+    "\n",
+    "\"\"\"\n",
+    "Output should be:\n",
+    "[[  1.23394576e-04   9.82013790e-01]\n",
+    " [  1.23394576e-04   9.82013790e-01]]\n",
+    "\"\"\"\n",
+    "print(output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
